kubernetes/lb-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lb-monitor
  template:
    metadata:
      labels:
        app: lb-monitor
    spec:
      serviceAccountName: lb-monitor
      containers:
      - name: lb-monitor
        image: docer2-lb-monitor:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
          protocol: TCP
