kubernetes/lb-monitor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-monitor
  labels:
    app: lb-monitor
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: lb-monitor
