kubernetes/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: web
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: admin
  selector:
    app: traefik
